k8s/svc-analysis-orchestrator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-analysis-orchestrator
  labels:
    kubernetes.io/metadata.name: svc-analysis-orchestrator
