k8s/svc-analysis-orchestrator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-analysis-orchestrator
  namespace: svc-analysis-orchestrator
spec:
  selector:
    app: svc-analysis-orchestrator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
