k8s/svc-analysis-orchestrator/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: svc-analysis-orchestrator
  namespace: svc-analysis-orchestrator
spec:
  podSelector:
    matchLabels:
      app: svc-analysis-orchestrator
  policyTypes:
  - Ingress
  - Egress
  ingress: [] # denies ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: messaging
      podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - protocol: TCP
      port: 5672
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
